k8s/observability/prometheus/overlays/dev/http-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-prometheus
  namespace: observability
spec:
  hostnames:
    - prometheus.192-168-58-2.sslip.io
  parentRefs:
    - name: homelab-gw
      namespace: networking
      sectionName: http
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authentik-forward-auth
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-server
          port: 80
