k8s/observability/prometheus/overlays/dev/httproute-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-prometheus
spec:
  hostnames:
    - prometheus.apps.192-168-58-2.sslip.io
